--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,7 @@
 # requirements.txt
-
-# Dependencies for raspberrypi.py
-# Python 3.11.X'
-RPi.GPIO
-luma.core
-luma.oled
-Pillow
-
+# Python Python <3.12, >=3.9
 # For GUI.py
 rich
 open_gopro
 requests
+pytest
